--- a/assets/scss/code-knack.scss
+++ b/assets/scss/code-knack.scss
@@ -21,7 +21,7 @@
             text-transform: uppercase;
             display: flex;
             font-size: 14px;
-            font-family: 'MavenPro-Bold';
+            font-family: 'MavenPro-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 'Helvetica Neue', sans-serif;
             align-items: center;
             opacity: 0.5;
         }
@@ -67,6 +67,7 @@
         box-shadow: 0 0.5px 0px 0px #000;
         pre {
             padding: 0 4px;
+            font-family: 'Menlo', 'Roboto Mono', 'Courier New', Courier, monospace !important;
         }
     }
     .code-knack-text {
@@ -75,18 +76,18 @@
         width: 100%;
         height: 100%;
         background: rgba(39, 40, 35, 1);
-        font-family: 'Menlo','Roboto Mono', 'Courier New', Courier, monospace;
+        font-family: 'Menlo', 'Roboto Mono', 'Courier New', Courier, monospace !important;
     }
     .code-knack-output {
         display: none;
         background: rgb(58, 54, 54);
-        font-family: 'Menlo','Roboto Mono', 'Courier New', Courier, monospace;
+        font-family: 'Menlo', 'Roboto Mono', 'Courier New', Courier, monospace !important;
         .code-knack-output-title {
             color: rgb(167, 167, 167);
             font-size: 12px;
             margin: 0 10px 0 20px;
             padding: 4px 0;
-            font-family: "MavenPro-Medium";
+            font-family: "MavenPro-Medium" -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 'Helvetica Neue', sans-serif;
             border-bottom: 1px solid rgba(255, 255, 255, 0.06);
         }
         .code-knack-output-content {
@@ -103,7 +104,7 @@
         border-bottom-left-radius: 3px;
         border-bottom-right-radius: 3px;
     }
-    .code-knack-loading-mask {
+    .code-knack-mask {
         display: none;
         position: absolute;
         top: 0;
