--- a/assets/scss/code-knack.scss
+++ b/assets/scss/code-knack.scss
@@ -98,6 +98,15 @@
             overflow: auto;
         }
     }
+    .code-knack-output.html-output {
+        .code-knack-output-content {
+            max-width: 100% !important;
+            background: rgba(252, 253, 255, 1);
+            margin: 0 10px;
+            border-radius: 3px;
+            box-shadow: inset 0 0 10px rgba(0,0,0,0.3);
+        }
+    }
     .code-knack-footer {
         background: rgb(58, 54, 54);
         height: 10px;
