--- a/assets/scss/code-knack.scss
+++ b/assets/scss/code-knack.scss
@@ -26,7 +26,7 @@
       color: var(--title, rgb(255, 255, 255));
       display: flex;
       font-size: 14px;
-      font-family: 'MavenPro-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 'Helvetica Neue', sans-serif;
+      font-family: 'Metropolis-Medium', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 'Helvetica Neue', sans-serif;
       align-items: center;
       opacity: 0.5;
     }
@@ -97,7 +97,7 @@
       font-size: 12px;
       margin: 0 10px 0 20px;
       padding: 4px 0;
-      font-family: "MavenPro-Medium" -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 'Helvetica Neue', sans-serif;
+      font-family: "Metropolis-Medium" -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 'Helvetica Neue', sans-serif;
       border-bottom-width: 1px;
       border-bottom-style: solid;
       border-bottom-color: rgba(255, 255, 255, 0.06);
@@ -108,6 +108,7 @@
       padding: 8px 12px 8px 20px;
       font-size: 14px;
       overflow: auto;
+      white-space: pre-wrap;
     }
   }
   .code-knack-output.html-output {
